Edited/reworded content, mostly cleaned up CSS, added "about me" page, updated resume, experimentally commented out dropdown menus

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <title>Juliet Slade</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/resume.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/styles2.css">
   </head>
 
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
           <a href="./main-pages/projects.html">PROJECTS</a>
-           <div class="dropdown-content">
+           <!-- <div class="dropdown-content">
               <a href="./project-pages/jshelp.html">js-help</a>
               <a href="./project-pages/LilGuy.html">lil guy</a>
               <a href="./project-pages/vjam.html">vectorJAM</a>
@@ -23,23 +24,24 @@
               <a href="./project-pages/boxes.html">juliet's boxes</a>
               <a href="./project-pages/mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="./main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./project-pages/this-site.html">juliet website</a>
               <a href="./project-pages/minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="./main-pages/resume.html">RESUME</a></li>
         <li><a class="active" href="./index.html">BIO</a></li>
+        <li><a href="./main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">juliet</span> <span id="slade">slade</span></span>
+    <div id="page-header">
+      <span><span id="first-word">juliet</span> <span id="second-word">slade</span></span>
     </div>
 
     <div class="line"></div>
@@ -48,24 +50,27 @@
       <p><span class="section-title">ABOUT ME</span></p>
       <p>
         <br>
-        Hi, I'm Juliet Slade and this is my first "real" website.
+        Hi, I'm Juliet Slade.
         <br>
         <br>
-        I'm from Saint Paul, Minnesota and have been living in New York since 2013 when I entered
-        Sarah Lawrence College with no idea what I would study. I quickly found computer science,
-        and spent the rest of my time there working through all of the CS classes offered.
-        This brought me to take classes on interpreting and compiling PLs, artificial
-        intelligence, databases, computer architecture, quantum computing, and physical computing.
-        Also, in a true liberal arts fashion, I integrated these with classes in which I made books,
-        wrote nonfiction, studied printmaking, and learned 3D modeling.
+        I'm from Saint Paul, Minnesota and have been living in New York since 2013 when I entered Sarah
+        Lawrence College. One of my first classes was in Computer Science, and four months later I would find
+        myself in an airport, waiting for my flight home for winter break, writing a howLongUntilTakeoff()
+        function in Python. This is to say: I became obsessed. I spent the rest of my time there working
+        through all of the CS classes offered at Sarah Lawrence. These included classes on interpreting and
+        compiling PLs, neural networks and genetic algorithms, databases, computer architecture, quantum
+        computing, and physical computing. Because of Sarah Lawrence's unique conference system and minimal course requirements, I not only got to
+        delve deeper into these subjects through semester-long research projects of my choosing, but I could
+        combined these with my other interests in courses in which I made books, wrote nonfiction, studied
+        printmaking, and learned 3D modeling. Outside of the classroom, I found time to rock climb and play with
+        the tennis team (MVP three years and Captain!).
         <br>
         <br>
-        Through my time at Sarah Lawrence I worked as a lab assistant and tutor, doing which I
-        found that I love helping people learn to program and answering questions. It both
-        solidified my own knowledge and pushed me to learn more. I also found that I enjoy
-        figuring out how to build things and helping people realize their projects. I have little
-        trouble getting too invested in and obsessed with every interesting challenge that
-        comes my way.
+        Additionally, while at Sarah Lawrence I worked as a lab assistant and tutor. I found that I am good
+        at and passionate about helping people learn to program and to realize their own projects. Every time I
+        meet with someone, be it for a tutoring session or brainstorming with a friend, I
+        feel fulfilled and inspired, and I'm always ready for another project that I can devote my time and
+        creative energy to.
       </p>
     </div>
 
