--- a/main-pages/fun.html
+++ b/main-pages/fun.html
@@ -3,16 +3,19 @@
   <head>
     <title>For Fun</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/forfun.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/forfun-table.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles1.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
   </head>
 
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="./projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="../project-pages/jshelp.html">js-help</a>
               <a href="../project-pages/LilGuy.html">lil guy</a>
               <a href="../project-pages/vjam.html">vectorJAM</a>
@@ -23,26 +26,27 @@
               <a href="../project-pages/boxes.html">juliet's boxes</a>
               <a href="../project-pages/mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="./fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="../project-pages/this-site.html">juliet website</a>
               <a href="../project-pages/minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="./resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="./contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">for</span> <span id="slade">fun</span></span>
+    <div id="page-header">
+      <span><span id="first-word">for</span> <span id="second-word">fun</span></span>
     </div>
 
-    <div id="left">
+    <div id="circle-table">
 
       <table>
         <tr>
@@ -51,7 +55,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/this-site.html'"></div></td>
-          <td class="name"><h3>THIS WEBSITE</h3></td>
+          <td class="project-name"><h3>THIS WEBSITE</h3></td>
         </tr>
 
           <td><div class="line"></div></td>
@@ -59,7 +63,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/minesweeper.html'"></div></td>
-          <td class="name"><h3>MINESWEEPER</h3></td>
+          <td class="project-name"><h3>MINESWEEPER</h3></td>
         </tr>
 
         <tr>
