--- a/main-pages/projects.html
+++ b/main-pages/projects.html
@@ -3,16 +3,18 @@
   <head>
     <title>Juliet Slade</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/jslade.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/projects-table.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles1.css">
   </head>
 
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="./projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="../project-pages/jshelp.html">js-help</a>
               <a href="../project-pages/LilGuy.html">lil guy</a>
               <a href="../project-pages/vjam.html">vectorJAM</a>
@@ -23,26 +25,27 @@
               <a href="../project-pages/boxes.html">juliet's boxes</a>
               <a href="../project-pages/mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="./fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="../project-pages/this-site.html">juliet website</a>
               <a href="../project-pages/minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="./resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="./contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">projects</span> <span id="slade"></span></span>
+    <div id="page-header">
+      <span><span id="first-word">projects</span> <span id="second-word"></span></span>
     </div>
 
-    <div id="left">
+    <div id="circle-table">
 
       <table>
         <tr>
@@ -51,7 +54,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/jshelp.html'"></div></td>
-          <td class="name"><h3>JS-HELP</h3></td>
+          <td class="project-name"><h3>JS-HELP</h3></td>
         </tr>
 
         <tr>
@@ -60,7 +63,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/LilGuy.html'"></div></td>
-          <td class="name"><h3>LIL GUY</h3></td>
+          <td class="project-name"><h3>LIL GUY</h3></td>
         </tr>
 
         <tr>
@@ -69,7 +72,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/vjam.html'"></div></td>
-          <td class="name"><h3>VECTORJAM</h3></td>
+          <td class="project-name"><h3>VECTORJAM</h3></td>
         </tr>
 
         <tr>
@@ -78,7 +81,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/quadtree.html'"></div></td>
-          <td class="name"><h3>QUAD TREES</h3></td>
+          <td class="project-name"><h3>QUAD TREES</h3></td>
         </tr>
 
         <tr>
@@ -87,7 +90,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/ceilings.html'"></div></td>
-          <td class="name"><h3>INVERSE REALITIES</h3></td>
+          <td class="project-name"><h3>INVERSE REALITIES</h3></td>
         </tr>
 
         <tr>
@@ -96,7 +99,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/three-d.html'"></div></td>
-          <td class="name"><h3>3D MODELING</h3></td>
+          <td class="project-name"><h3>3D MODELING</h3></td>
         </tr>
 
         <tr>
@@ -105,7 +108,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/vpl.html'"></div></td>
-          <td class="name"><h3>VPL</h3></td>
+          <td class="project-name"><h3>VPL</h3></td>
         </tr>
 
         <tr>
@@ -114,7 +117,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/boxes.html'"></div></td>
-          <td class="name"><h3>JULIET'S BOXES</h3></td>
+          <td class="project-name"><h3>JULIET'S BOXES</h3></td>
         </tr>
 
         <tr>
@@ -123,7 +126,7 @@
 
         <tr>
           <td><div class="circle" onclick="location.href ='../project-pages/mll.html'"></div></td>
-          <td class="name"><h3>MOTORS, LIGHTS, &amp; LOGIC</h3></td>
+          <td class="project-name"><h3>MOTORS, LIGHTS, &amp; LOGIC</h3></td>
         </tr>
 
         <tr>
