--- a/project-pages/LilGuy.html
+++ b/project-pages/LilGuy.html
@@ -3,15 +3,16 @@
   <head>
     <title>Lil Guy</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
   </head>
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="../main-pages/projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./jshelp.html">js-help</a>
               <a class="active" href="./LilGuy.html">lil guy</a>
               <a href="./vjam.html">vectorJAM</a>
@@ -22,42 +23,43 @@
               <a href="./boxes.html">juliet's boxes</a>
               <a href="./mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="../main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="../main-pages/resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="../main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">lil</span> <span id="slade">guy</span></span>
+    <div id="page-header">
+      <span><span id="first-word">lil</span> <span id="second-word">guy</span></span>
     </div>
     <div class="line"></div>
     <div id="description">
       <p><span class="section-title">LIL GUY</span></p>
-      <p><span class="title">SARAH LAWRENCE COLLEGE</span> | <span class="tag">OUR WORLD, OTHER WORLDS</span>
-      <p><span class="details">Spring 2017</span></p>
-      <p>Conference project for a class about world-building. I've always thought about walking on the ceiling and
-      the challenges and advantages it would present, and was able to explore it in the classroom in two
-      courses this year. Early on, in discussions with friends, Lil Guy was created. A small person who lives on
-      the ceiling, he embodies a child-like imagination. Something that I've found the most fun through this process
-      is that everyone who I bring this up with has some sort of "what if I walked on the ceiling" experiences, and
+      <p><span class="section-details-1">SARAH LAWRENCE COLLEGE</span> | <span class="section-details-2">OUR WORLD, OTHER WORLDS</span></p>
+      <p><span class="section-details-3">Spring 2017</span></p>
+      <p>I've always thought about walking on the ceiling and the challenges and advantages it would present,
+      and was able to explore it in the classroom in two courses this year. Early on, in discussions with friends,
+      Lil Guy was created. A small person who lives on the ceiling, he embodies a child-like imagination. Every
+      person who I bring this up with has some sort of "what if I walked on the ceiling" experiences, and
       lots of interesting ceiling ideas, thoughts, and questions about the physics of it all.
       <br>
       <br>
       This book includes words to describe what Lil Guy is experiencing, as he doesn't see things in the same context
       as we do. The images provide an insight to the reader of what's really going on.
-      It's a quiet exploration for all ages.</p>
-      </p>
-      </p>
+      <br>
+      <br>
+      I made five physical copies of the book and below is an ebook of the pdf.
+    </p>
     </div>
     <div class="short-line"></div>
     <div id="eLilGuy">
