--- a/project-pages/jshelp.html
+++ b/project-pages/jshelp.html
@@ -3,15 +3,17 @@
   <head>
     <title>JS-help</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
   </head>
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="../main-pages/projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a class="active" href="./jshelp.html">js-help</a>
               <a href="./LilGuy.html">lil guy</a>
               <a href="./vjam.html">vectorJAM</a>
@@ -22,39 +24,40 @@
               <a href="./boxes.html">juliet's boxes</a>
               <a href="./mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="../main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="../main-pages/resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="../main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">JS</span> <span id="slade">help</span></span>
+    <div id="page-header">
+      <span><span id="first-word">JS</span> <span id="second-word">help</span></span>
     </div>
     <div class="line"></div>
     <div id="description">
       <p><span class="section-title">JS-HELP</span></p>
-      <p><span class="title">SARAH LAWRENCE COLLEGE</span> | <span class="tag">INDEPENDENT STUDY IN WEB TOOLS FOR LEARNING TO PROGRAM</span></p>
-      <p><span class="details">Spring 2017</span></p>
+      <p><span class="section-details-1">SARAH LAWRENCE COLLEGE</span> | <span class="section-details-2">INDEPENDENT STUDY IN WEB TOOLS FOR LEARNING TO PROGRAM</span></p>
+      <p><span class="section-details-3">Spring 2017</span></p>
       <p>JS-help (JS-hint already exists and the JS doubles for JavaScript and Juliet Slade!)
-      is a tool to help students get hints while working on programming problems. I sat in on
-      and worked as a lab assistant for the intro. to web programming class and observed that
-      students often need lots of examples and help moving forward in problems. JS-help, given
-      a solution, breaks it into a sequence of automatically generated hints that can be
-      expanded much like how code folding works, but in reverse.
+      is a tool to help students get hints while working on programming problems. I worked as a
+      lab assistant and tutor for the Intro. to Web Programming class and observed that
+      students often need many examples as well as help moving forward in solving problems.
+      JS-help, given a solution, breaks it into a sequence of automatically generated hints
+      that can be expanded much like how code folding works, but in reverse.
       <br>
       <br>
-      My <a href="https://juliet36.github.io/JS-help/web-page/combined.html">demo</a> demonstrates a potential use in which a series of problems are given of a
-      specific category, while loops for example, and as the user works through the
+      My <a href="https://juliet36.github.io/JS-help/web-page/combined.html">demo</a> demonstrates a potential use in which a series of problems are given from chosen
+      categories (e.g. while loops, for loops, if/elses) and as the user works through the
       problems they can expand the solution code if they desire and transfer it to the
       editor panel. When they are ready to submit, their code is run on some unit tests
       and if it's correct they can move on. Depending on the number of hints they
