--- a/project-pages/vjam.html
+++ b/project-pages/vjam.html
@@ -3,16 +3,17 @@
   <head>
     <title>VectorJAM</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume-alt.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
   </head>
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="../main-pages/projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./jshelp.html">js-help</a>
               <a href="./LilGuy.html">lil guy</a>
               <a class="active" href="./vjam.html">vectorJAM</a>
@@ -23,36 +24,38 @@
               <a href="./boxes.html">juliet's boxes</a>
               <a href="./mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="../main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="../main-pages/resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="../main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">vector</span> <span id="slade">JAM</span></span>
+    <div id="page-header">
+      <span><span id="first-word">vector</span> <span id="second-word">JAM</span></span>
     </div>
     <div class="line"></div>
-    <div id="combined-gallery">
-    <div id="descriptoon">
+    <div id="project-details-container-narrow-description">
+    <div id="narrow-description">
       <p><span class="section-title">VECTORJAM</span></p>
-      <p><span class="title">SARAH LAWRENCE COLLEGE</span> | <span class="tag">QUANTUM COMPUTING</span></p>
-      <p><span class="details">Fall 2016</span></p>
-      <p>Conference project for Quantum Computing class. Completed with classmate, Avinoam, and titled after
-      our "brand" we've created, JAM. During our summer research project it stood for "Juliet Avinoam Mike"
-      but this time it was "Juliet Avinoam Math". vectorJAM is a visualizer for linear algebra concepts we
-      learned in the class. It shows the interaction of a matrix on a vector, along with displaying the
-      eigenvalues, eigenvectors, and product vectors. It supports complex matrices, as well, and visualizes
-      in the complex plane.
+      <p><span class="section-details-1">SARAH LAWRENCE COLLEGE</span> | <span class="section-details-2">QUANTUM COMPUTING</span></p>
+      <p><span class="section-details-3">Fall 2016</span></p>
+      <p>vectorJAM is a visualizer for linear algebra concepts we learned in a Quantum Computing class. It
+      shows the interaction of a matrix on a vector, along with displaying the eigenvalues, eigenvectors,
+      and product vectors. It supports complex matrices, as well, and visualizes their effect in the
+      complex plane.
+      <br>
+      <br>
+      I completed this with my classmate, Avinoam, and the JAM stands for "Juliet Avinoam Math."
       <br>
       <br>
       <a href="https://github.com/avinoamhenig/vector-jam">GitHub Repository</a>
@@ -60,7 +63,7 @@
 
     </div>
     <div id="hidden-line-gallery"></div>
-    <div id="gif-gallery">
+    <div id="gif-container">
       <img style="width: 100%"src="../project-gifs/vjdf.gif" />
     </div>
   </div>
