--- a/project-pages/boxes.html
+++ b/project-pages/boxes.html
@@ -3,17 +3,18 @@
   <head>
     <title>Juliet's Boxes</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume-alt.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
 
   </head>
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="../main-pages/projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./jshelp.html">js-help</a>
               <a href="./LilGuy.html">lil guy</a>
               <a href="./vjam.html">vectorJAM</a>
@@ -24,35 +25,36 @@
               <a class="active" href="./boxes.html">juliet's boxes</a>
               <a href="./mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="../main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="../main-pages/resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="../main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">juliet's</span> <span id="slade">boxes</span></span>
+    <div id="page-header">
+      <span><span id="first-word">juliet's</span> <span id="second-word">boxes</span></span>
     </div>
     <div class="line"></div>
-    <div id="combined-gallery">
-    <div id="descriptoon">
+    <div id="project-details-container-narrow-description">
+    <div id="narrow-description">
       <p><span class="section-title">JULIET'S BOXES</span></p>
-      <p><span class="title">SARAH LAWRENCE COLLEGE</span> | <span class="tag">MOTORS, LIGHTS, &amp; LOGIC</span></p>
-      <p><span class="details">Spring 2016</span></p>
+      <p><span class="section-details-1">SARAH LAWRENCE COLLEGE</span> | <span class="section-details-2">MOTORS, LIGHTS, &amp; LOGIC</span></p>
+      <p><span class="section-details-3">Spring 2016</span></p>
       <p>
         For my physical computing class, I made a series of modular cardboard games. They're a set of interactive
         boxes that can be controlled by the same "control box". The idea was to advance through the games,
         moving on only when you win one and get the password that unlocks the next box's game. They are designed
-        so that, as long as it uses the same 10 pins on the Arduino (a mix of analog and digital pins), one could
+        so that, as long as it uses the same 10 pins on the Arduino (a mix of analog and digital pins), you could
         keep adding boxes to the series.
         <br>
         <br>
@@ -63,12 +65,13 @@
             <li><em>Dice Box:</em> a game that recognizes which cell a dice lands in.</li>
           </ul>
 
-        <p><a href="https://itsmejuliet.wordpress.com/category/motors-lights-and-logic/">More info</a>.</p>
+        <p><a href="https://itsmejuliet.wordpress.com/category/motors-lights-and-logic/">More info</a> on the process of
+          imagining and prototyping this project.</p>
       </p>
     </div>
     <div id="hidden-line-gallery"></div>
 
-    <div class="utube-slide-container" >
+    <div class="video-slide-container" >
 
       <div class="mySlides fade" style="text-align: center;">
         <img style="height: 315px;" src="../project-images/js-boxes-logo.svg" />
@@ -93,13 +96,13 @@
         <div class="slide-text">Dice Box</div>
       </div>
 
-      <a class="prev" onclick="plusSlides(-1, 'mySlides')">&#10094;</a>
-      <a class="next" onclick="plusSlides(1, 'mySlides')">&#10095;</a>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
     </div>
   </div>
     <script src='../project-scripts/slides.js'></script>
-    <script>showSlides(1, 'mySlides');</script>
+
     <div class="line"></div>
     <div id="tech-description">
       <p><span class="section-title">TOOLS</span></p>
