--- a/project-pages/this-site.html
+++ b/project-pages/this-site.html
@@ -3,17 +3,18 @@
   <head>
     <title>Juliet Website</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/resume-alt.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/project-responsive.css">
 
   </head>
   <body>
-    <div id="nav1">
+    <div id="nav-container">
       <ul class="nav">
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a href="../main-pages/projects.html">PROJECTS</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a href="./jshelp.html">js-help</a>
               <a href="./LilGuy.html">lil guy</a>
               <a href="./vjam.html">vectorJAM</a>
@@ -24,23 +25,24 @@
               <a href="./boxes.html">juliet's boxes</a>
               <a href="./mll.html">physical computing</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown"> -->
             <a class="active" href="../main-pages/fun.html">FOR FUN</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
               <a class="active" href="./this-site.html">juliet website</a>
               <a href="./minesweeper.html">minesweeper</a>
             </div>
-          </div>
+          </div> -->
         </li>
         <li><a href="../main-pages/resume.html">RESUME</a></li>
         <li><a href="../index.html">BIO</a></li>
+        <li><a href="../main-pages/contactme.html">CONTACT ME</a></li>
       </ul>
     </div>
-    <div id="name">
-      <span><span id="juliet">juliet</span> <span id="slade">website</span></span>
+    <div id="page-header">
+      <span><span id="first-word">juliet</span> <span id="second-word">website</span></span>
     </div>
     <div class="line"></div>
 
@@ -48,10 +50,8 @@
         <p><span class="section-title">THIS WEBSITE</span></p>
         <p>
           <br>
-          Part procrastination, part self-improvement, I took a bunch of courses on
-          <a href="https://www.codeacademy.com">Codeacademy</a> and decided to make
-          my first website. I based the theme off of: an idea I had for the circles
-          connected by lines on the project page and the font/layout of a <a href="https://www.latextemplates.com/template/deedy-resume-cv">
+          I based the theme off of an idea I had for the circles connected by lines on the "Projects"
+          and "For Fun" pages and the font/layout of a <a href="https://www.latextemplates.com/template/deedy-resume-cv">
           Latex resume template.</a>
         </p>
       </div>
